name:                bumpquota
version:             0.1.0.0
synopsis:            Bump quotas for everyone
license:             GPL-3
license-file:        LICENSE
author:              Maximilian Marx
maintainer:          mmarx@wh2.tu-dresden.de
copyright:           2014 Maximilian Marx
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable bumpquota
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -O2 -fno-warn-unused-binds
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.5 && <4.7
                     , attoparsec >= 0.10 && <0.11
                     , data-default >= 0.4 && <0.6
                     , text >= 0.11 && <0.12
                     , process >= 1.1 && <1.3
  default-language:    Haskell2010