name:                bumpquota
version:             0.1.0.0
synopsis:            Bump quotas for everyone
license:             GPL-3
license-file:        LICENSE
author:              Maximilian Marx
maintainer:          mmarx@wh2.tu-dresden.de
copyright:           2014 Maximilian Marx
category:            System
build-type:          Simple
cabal-version:       >=1.10

Flag Static
  Description:       Build a statically-linked binary
  Default:           False

executable bumpquota
  main-is:             Main.hs
  if flag(static)
    ghc-options:         -static -Wall -Werror -O2 -rtsopts=all
    ld-options:          -static -pthread
  else
    ghc-options:         -static -Wall -Werror -O2 -rtsopts=all

  other-extensions:    OverloadedStrings
  build-depends:       base >=4.5 && <4.7
                     , attoparsec >= 0.10 && <0.11
                     , data-default >= 0.4 && <0.6
                     , text >= 0.11 && <0.12
                     , process >= 1.1 && <1.3
                     , optparse-applicative >= 0.9 && <0.10
  default-language:    Haskell2010