name:                bumpquota
version:             0.1.0.0
synopsis:            Bump quotas for everyone
license:             GPL-3
license-file:        LICENSE
author:              Maximilian Marx
maintainer:          mmarx@wh2.tu-dresden.de
copyright:           2014, 2015 Maximilian Marx
category:            System
build-type:          Simple
cabal-version:       >=1.10

Flag Static
  Description:       Build a statically-linked binary
  Default:           False

executable bumpquota
  main-is:             Main.hs
  if flag(static)
    ghc-options:         -static -Wall -Werror -O2 -rtsopts=all
    ld-options:          -static -pthread
  else
    ghc-options:         -static -Wall -Werror -O2 -rtsopts=all

  other-extensions:    OverloadedStrings
  build-depends:       base
                     , attoparsec
                     , data-default
                     , text
                     , process
                     , optparse-applicative
  default-language:    Haskell2010